# fusion

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  config.advanced.yaml  config.example.yaml  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: ci.yml  release.yml
benches/: build.rs  concurrent.rs  contention.rs  metadata.rs  read.rs
src/: attrs.rs  builder.rs  config.rs  lib.rs  main.rs  tree.rs  vfs.rs  watcher.rs
