[package]
name = "fusion"
version = "0.1.0"
edition = "2021"
description = "Read-only virtual NFS filesystem that merges media roots into Infuse-friendly shares"

[dependencies]
nfsserve = "0.11"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
notify = "6"
notify-debouncer-full = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
ahash = "0.8"
lru = "0.12"

# jemalloc handles 1 MiB read buffers (per-RPC playback alloc) far better
# than glibc malloc, which mmap/munmaps each. Not used on macOS where
# system malloc is already competitive.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
